fix: hides additional scrollbars on iOS
- weirdly not visible on any other platform

--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,7 @@ body {
   height: 100vh;
   min-height: 100vh;
   font-family: var(--font-sans);
+  overflow: hidden;
 }
 
 h1,
